add paginated list styles

--- a/src/assets/styles/details/details.scss
+++ b/src/assets/styles/details/details.scss
@@ -25,3 +25,6 @@
 @import './avatar-icon.scss';
 // character information styles
 @import './character-information.scss';
+
+// paginated list styles
+@import './paginatedList/';
