add function to pagination next and prev

--- a/src/assets/styles/details/paginatedList/index.scss
+++ b/src/assets/styles/details/paginatedList/index.scss
@@ -1,3 +1,9 @@
 @import './selectable.scss';
-
 @import './list.scss';
+
+.paginated-button {
+  cursor: pointer;
+}
+.pagination-count {
+  margin-top: 20px;
+}
