add routes and some minor changes

--- a/src/assets/styles/details/paginatedList/list.scss
+++ b/src/assets/styles/details/paginatedList/list.scss
@@ -9,6 +9,7 @@
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 50vw;
     height: 60vh;
     overflow-y: auto;
